# light-ocr

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  docker-compose.yml
.github/workflows/: apple-qualification.yml  core.yml  npm-promote.yml  npm-release.yml  tiled-qualification.yml  webgpu-native.yml
bindings/node/: CMakeLists.txt  README.md  package.json
bindings/node/js/: index.cjs  index.d.ts  load-native.cjs
bindings/node/src/: addon.cpp
bindings/node/test/: adapter.test.cjs  webgpu-qualification.cjs
cmake/: Dependencies.cmake  StageNodeRuntime.cmake  WebGpuRuntime.cmake
contracts/: tiled-platform-baselines.json  tiled-platform-baselines.schema.json
corpus/: generate_tiled_corpus.py  goldens-bounded.lock.json  goldens.lock.json  parity-exceptions.json
corpus/goldens/: generated-blank.json  generated-hello-123.json  generated-japanese-horizontal.json  generated-japanese-rotated.json  generated-low-contrast-perspective.json  generated-traditional-horizontal.json  paddleocr-boarding-pass.json  paddleocr-book-page.json  paddleocr-captcha-handwriting.json  paddleocr-display-simplified.json  paddleocr-garden-sign.json  paddleocr-rec-phone.json  paddleocr-rec-simplified.json  paddleocr-xfund-form.json
corpus/goldens-bounded/: generated-blank.json  generated-hello-123.json  generated-japanese-horizontal.json  generated-japanese-rotated.json  generated-low-contrast-perspective.json  generated-traditional-horizontal.json  paddleocr-boarding-pass.json  paddleocr-book-page.json  paddleocr-captcha-handwriting.json  paddleocr-display-simplified.json  paddleocr-garden-sign.json  paddleocr-rec-phone.json  paddleocr-rec-simplified.json  paddleocr-xfund-form.json
corpus/tiled-v1/: goldens.lock.json  ground-truth.lock.json  parity-exceptions.json
corpus/tiled-v1/fixtures/tiled-dense-2048/: fixture.json
corpus/tiled-v1/fixtures/tiled-four-way-intersection-2048/: fixture.json
corpus/tiled-v1/fixtures/tiled-horizontal-boundary-2048/: fixture.json
corpus/tiled-v1/fixtures/tiled-near-neighbor-2048/: fixture.json
corpus/tiled-v1/fixtures/tiled-original-edges-2048/: fixture.json
corpus/tiled-v1/fixtures/tiled-reading-order-2048/: fixture.json
corpus/tiled-v1/fixtures/tiled-small-text-2048/: fixture.json
corpus/tiled-v1/fixtures/tiled-vertical-boundary-2048/: fixture.json
corpus/tiled-v1/goldens/: tiled-dense-2048.json  tiled-four-way-intersection-2048.json  tiled-horizontal-boundary-2048.json  tiled-near-neighbor-2048.json  tiled-original-edges-2048.json  tiled-reading-order-2048.json  tiled-small-text-2048.json  tiled-vertical-boundary-2048.json
docs/: apple-device-acceleration.md  architecture.md  build-and-release.md  decisions.md  implementation-status.md  linux-device-acceleration.md  memory-optimization.md  model-bundle.md  napi-design.md  native-api.md  npm-packaging.md  parity-testing.md  requirements.md  roadmap.md  tiled-design-and-acceptance.md  windows-device-acceleration.md
docs/releases/: npm-0.1.0.md  npm-0.2.0.md  npm-0.3.0.md
docs/superpowers/plans/: 2026-07-21-rest-api-docker.md
docs/superpowers/specs/: 2026-07-21-rest-api-docker-design.md
include/light_ocr/: core.hpp  error.hpp  types.hpp
models/: bundles.lock.json  deps.lock.json
models/derived/webgpu-fp16-20260719.1/: provenance.json
oracle/: benchmark.py  generate_goldens.py  generate_tiled_goldens.py  oracle.py  run_benchmark.py  run_corpus.py  run_memory_gate.py  run_parity.py  run_quality.py  run_tiled_benchmark.py  run_tiled_corpus.py  run_tiled_parity.py  run_tiled_quality.py  tiled.py  tiled_benchmark.py  tiled_compare.py  tiled_ground_truth.py  tiled_oracle.py
reports/webgpu-qualification/linux-x64/: qualification-report.json  qualification-report.sha256
reports/webgpu-qualification/linux-x64/artifacts/: native-runtime-descriptor.json  sdk-artifact-manifest.json
reports/webgpu-qualification/linux-x64/cases/: generated-blank-allow.json  generated-blank-cpu.json  generated-blank-fp32.json  generated-blank-strict.json  generated-hello-123-allow.json  generated-hello-123-auto.json  generated-hello-123-cpu.json  generated-hello-123-fp32.json  generated-hello-123-lifecycle.json  generated-hello-123-strict.json  generated-japanese-horizontal-allow.json  generated-japanese-horizontal-cpu.json  generated-japanese-horizontal-fp32.json  generated-japanese-horizontal-strict.json  generated-japanese-rotated-allow.json  generated-japanese-rotated-cpu.json  (+43 more)
reports/webgpu-qualification/windows-x64/: REAL-DEVICE-REPORT.md  qualification-report.json  qualification-report.sha256
server/: .dockerignore  Dockerfile  README.md
server/src/: app.js
server/src/routes/: health.js  info.js  ocr.js
server/test/: app.test.js
src/core/: engine.cpp  engine_factory.hpp
src/detection/: tiled.cpp  tiled.hpp
src/geometry/: geometry.cpp  geometry.hpp
src/inference/: backend.hpp  selection.hpp
src/inference/coreml/: backend.hpp  backend.mm
src/inference/onnxruntime/: backend.cpp  backend.hpp
src/model/: bundle_data.hpp  model_bundle.cpp
src/preprocess/: tensor.cpp  tensor.hpp
src/result/: result.cpp
tests/integration/: apple.cpp  main.cpp
tests/python/: test_bootstrap_dependencies.py  test_bootstrap_models.py  test_npm_release.py  test_tiled_release_gate.py  test_webgpu_models.py  test_webgpu_qualification.py  test_webgpu_report_review.py  test_webgpu_runtime.py
tests/unit/: test_image.cpp  test_model_bundle.cpp  test_selection.cpp  test_tiled.cpp
tools/: bootstrap_dependencies.py  bootstrap_models.py  generate_release_metadata.py  npm_release.py  package_model_bundle.py  tiled_release_gate.py
tools/apple/: cache_concurrency_gate.py  package_bundle.py
tools/benchmark/: main.cpp
tools/common/: arguments.hpp
tools/memory_gate/: main.cpp
tools/npm/: smoke.cjs  tiled-benchmark.cjs  verdaccio-release.yaml
tools/stage_probe/: main.cpp
tools/webgpu/: README.md  build_runtime.py  convert_models.py  package_bundle.py  qualify.py  requirements.in  review_reports.py  runtime-lock.json
(+359 files in other folders)
